--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
-DATABASE=hoopcast
-USER=postgres
-PASSWORD=rondb
-HOST=localhost
-PORT=5432
+DATABASE_URL=postgresql://postgres.kgsppzgkjiklzoeywsrj:hoopcastdb_@aws-0-us-west-2.pooler.supabase.com:6543/postgres
+DB_SSLMODE=require
+DB_HOST=aws-0-us-west-2.pooler.supabase.com
+DB_PORT=6543
+DB_USER=postgres.kgsppzgkjiklzoeywsrj
+DB_PASSWORD=hoopcastdb_
+DB_NAME=postgres
